fix overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -511,6 +511,9 @@ textarea {
 	background-color: rgba(0, 0, 0, 0.95);
 	padding: 5px 0;
 }
+.header {
+	z-index: 4;
+}
 .fixed-header-on .site-name {
 	font-size: 24px;
 }
